Added page for admin to delete services

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".Registration" />
         <activity android:name=".LogIn" />
         <activity android:name=".WelcomePage" />
-        <activity android:name=".AddServicePage"></activity>
+        <activity android:name=".AddServicePage" />
+        <activity android:name=".DeletingServicePage"></activity>
     </application>
 
 </manifest>
