--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity android:name=".LogIn" />
         <activity android:name=".WelcomePage" />
         <activity android:name=".AddServicePage" />
-        <activity android:name=".DeletingServicePage"></activity>
+        <activity android:name=".DeletingServicePage" />
+        <activity android:name=".EditServicePage"></activity>
     </application>
 
 </manifest>
