--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,14 @@
         <activity android:name=".WelcomePage" />
         <activity android:name=".AddServicePage" />
         <activity android:name=".DeletingServicePage" />
-        <activity android:name=".EditServicePage"></activity>
+        <activity android:name=".EditServicePage" />
+        <activity android:name=".EditServiceProviderInfo" />
+        <activity
+            android:name=".editServiceProviderTime"
+            android:label="@string/title_activity_edit_service_provider_time" />
+        <activity
+            android:name=".editServiceProviderServices"
+            android:label="@string/title_activity_edit_service_provider_services"></activity>
     </application>
 
 </manifest>
