--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity
             android:name=".editServiceProviderServices"
             android:label="@string/title_activity_edit_service_provider_services"></activity>
+        <activity android:name=".providerAdvancedInfo" />
     </application>
 
 </manifest>
