Added the provider search

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".DeletingServicePage" />
         <activity android:name=".EditServicePage" />
         <activity android:name=".EditServiceProviderInfo" />
+        <activity android:name=".ProviderSearch"/>
         <activity
             android:name=".editServiceProviderTime"
             android:label="@string/title_activity_edit_service_provider_time" />
