Users can now select the provider searched and go to a new page where info would go

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity android:name=".DeletingServicePage" />
         <activity android:name=".EditServicePage" />
         <activity android:name=".EditServiceProviderInfo" />
-        <activity android:name=".ProviderSearch"/>
+        <activity android:name=".ProviderSearch" />
         <activity
             android:name=".editServiceProviderTime"
             android:label="@string/title_activity_edit_service_provider_time" />
@@ -33,7 +33,8 @@
         <activity android:name=".providerAdvancedInfo" />
         <activity
             android:name=".Calender"
-            android:label="@string/title_activity_calender"></activity>
+            android:label="@string/title_activity_calender" />
+        <activity android:name=".UserGetProviderInfo"></activity>
     </application>
 
 </manifest>
