--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".EditServiceProviderInfo" />
         <activity android:name=".ProviderSearch" />
         <activity android:name=".SetTime" />
+        <activity android:name=".UserHistoryPage" />
         <activity
             android:name=".editServiceProviderTime"
             android:label="@string/title_activity_edit_service_provider_time" />
