updated rating page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         <activity android:name=".ProviderSearch" />
         <activity android:name=".SetTime" />
         <activity android:name=".UserHistoryPage" />
+        <activity android:name=".RateServicePage" />
+
         <activity
             android:name=".editServiceProviderTime"
             android:label="@string/title_activity_edit_service_provider_time" />
